[package]
name = "oggify"
version = "0.1.0"
authors = ["Lorenzo Pistone <blaffablaffa@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download Spotify tracks to Ogg Vorbis format with a Premium account"
keywords = ["spotify"]
repository = "https://github.com/pisto/oggify"
readme = "README.md"

[dependencies]
tokio-core = "0.1.17"
librespot-core = { git = "https://github.com/librespot-org/librespot.git", rev = "a3c63b4e055f3ec68432d4a27479bed102e68e9e" }
librespot-metadata = { git = "https://github.com/librespot-org/librespot.git", rev = "a3c63b4e055f3ec68432d4a27479bed102e68e9e" }
librespot-audio = { git = "https://github.com/librespot-org/librespot.git", rev = "a3c63b4e055f3ec68432d4a27479bed102e68e9e" }
regex = "1.1.0"
log = "0.4.6"
env_logger = "0.6.0"
scoped_threadpool = "0.1.9"
